<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">CalculatorAndroid</string>

    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="zero">0</string>

    <string name="operation_add">+</string>
    <string name="operation_sub">-</string>
    <string name="operation_multiply">*</string>
    <string name="operation_divide">/</string>
    <string name="operation_percent">%</string>
    <string name="operation_sqrt">\u221a</string>

    <string name="back">Back</string>
    <string name="ce">CE</string>
    <string name="comma">.</string>

    <string name="equal">=</string>

</resources>
