<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
              android:layout_margin="5dp">

    <TextView
            android:id="@+id/displayView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/darker_gray"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginBottom="5dp"
            android:textColor="#000"
            android:gravity="right|bottom"
            android:textSize="40sp"
            android:layout_weight="1">
    </TextView>

    <LinearLayout
            android:id="@+id/buttonWrapper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

    <LinearLayout
            android:id="@+id/buttonArea1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

        <Button
                android:id="@+id/buttonCE"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/ce"
                android:onClick="onClick">
        </Button>

        <Button
                android:id="@+id/buttonAdd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/operation_add" android:layout_gravity="center_horizontal|top"
                android:onClick="onClick">
        </Button>

        <Button
                android:id="@+id/buttonSub"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/operation_sub"
                android:onClick="onClick">
        </Button>

        <Button
                android:id="@+id/buttonBack"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/back"
                android:onClick="onClick">
        </Button>

    </LinearLayout>

    <LinearLayout
            android:id="@+id/buttonArea2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >

        <Button
                android:id="@+id/button1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/one"
                android:onClick="onClick">
        </Button>

        <Button
                android:id="@+id/button2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/two"
                android:onClick="onClick">
        </Button>

        <Button
                android:id="@+id/button3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/three"
                android:onClick="onClick">
        </Button>

        <Button
                android:id="@+id/buttonMultiply"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/operation_multiply"
                android:onClick="onClick">
        </Button>

    </LinearLayout>

    <LinearLayout
            android:id="@+id/buttonArea3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

        <Button
                android:id="@+id/button4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/four"
                android:onClick="onClick">
        </Button>

        <Button
                android:id="@+id/button5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/five"
                android:onClick="onClick">
        </Button>

        <Button
                android:id="@+id/button6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/six"
                android:onClick="onClick">
        </Button>

        <Button
                android:id="@+id/buttonDiv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/operation_divide"
                android:onClick="onClick">
        </Button>

    </LinearLayout>

    <LinearLayout
            android:id="@+id/buttonArea4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >

        <Button
                android:id="@+id/button7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/seven"
                android:onClick="onClick">
        </Button>

        <Button
                android:id="@+id/button8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/eight"
                android:onClick="onClick">
        </Button>

        <Button
                android:id="@+id/button9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/nine"
                android:onClick="onClick">
        </Button>

        <Button
                android:id="@+id/buttonPercent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/operation_percent"
                android:onClick="onClick">
        </Button>

    </LinearLayout>

    <LinearLayout
            android:id="@+id/buttonArea5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >

        <Button
                android:id="@+id/button0"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/zero"
                android:onClick="onClick">
        </Button>

        <Button
                android:id="@+id/buttonSqrt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/operation_sqrt"
                android:onClick="onClick">
        </Button>

        <Button
                android:id="@+id/buttonComma"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/comma"
                android:onClick="onClick">
        </Button>

        <Button
                android:id="@+id/buttonEqual"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/equal"
                android:onClick="onClick">
        </Button>

    </LinearLayout>

    </LinearLayout>

</LinearLayout>

